[gd_scene load_steps=19 format=1]

[ext_resource path="res://Scripts/gameSelector.gd" type="Script" id=1]
[ext_resource path="res://Assets/font52.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scripts/BeforeGameTimer.gd" type="Script" id=3]
[ext_resource path="res://Assets/font32.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Assets/tv.png" type="Texture" id=5]
[ext_resource path="res://Assets/buttonquit.png" type="Texture" id=6]
[ext_resource path="res://Assets/sounds/Ohno.wav" type="Sample" id=7]
[ext_resource path="res://Assets/sounds/hereWeGo.wav" type="Sample" id=8]
[ext_resource path="res://Assets/sounds/keepItGoing.wav" type="Sample" id=9]
[ext_resource path="res://Assets/sounds/letsGo.wav" type="Sample" id=10]
[ext_resource path="res://Assets/lobbytrack.wav" type="Sample" id=11]
[ext_resource path="res://Assets/sounds/ohRight.wav" type="Sample" id=12]
[ext_resource path="res://Assets/sounds/ohYeah.wav" type="Sample" id=13]
[ext_resource path="res://Assets/sounds/wah.wav" type="Sample" id=14]
[ext_resource path="res://Assets/lobbytrack.ogg" type="AudioStream" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="SampleLibrary" id=3]

samples/Ohno = { "db":12.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/hereWeGo = { "db":12.0, "pitch":1.0, "sample":ExtResource( 8 ) }
samples/keepItGoing = { "db":12.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/letsGo = { "db":12.0, "pitch":1.0, "sample":ExtResource( 10 ) }
samples/lobby = { "db":0.0, "pitch":1.0, "sample":ExtResource( 11 ) }
samples/ohRight = { "db":12.0, "pitch":1.0, "sample":ExtResource( 12 ) }
samples/ohYeah = { "db":12.0, "pitch":1.0, "sample":ExtResource( 13 ) }
samples/wah = { "db":12.0, "pitch":1.0, "sample":ExtResource( 14 ) }

[node name="gameSelector" type="Node2D"]

script/script = ExtResource( 1 )

[node name="gui" type="Node2D" parent="."]

[node name="timer" type="Label" parent="gui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 620.0
margin/top = 30.0
margin/right = 681.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.185455, 0.688581, 0.804688, 1 )
text = "0\n"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timers" type="Node2D" parent="."]

transform/pos = Vector2( 0, 30 )
__meta__ = { "_edit_lock_":true }

[node name="beforeGame" type="Timer" parent="timers"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false
script/script = ExtResource( 3 )

[node name="duringGame" type="Timer" parent="timers"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="lobbyGui" type="Node2D" parent="."]

transform/pos = Vector2( 344, 326 )

[node name="winLose" type="Label" parent="lobbyGui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -257.0
margin/top = -8.0
margin/right = 182.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Prepare yourself"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lives" type="Label" parent="lobbyGui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -124.0
margin/top = -96.0
margin/right = -8.0
margin/bottom = -58.0
custom_fonts/font = ExtResource( 4 )
text = "lives"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_group_":true }

[node name="score" type="Label" parent="lobbyGui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -144.0
margin/top = 74.0
margin/right = -6.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 4 )
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="background" type="Sprite" parent="lobbyGui"]

transform/pos = Vector2( -344, -326 )
z/z = -1
texture = ExtResource( 5 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="Quit" type="MenuButton" parent="lobbyGui"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -74.0
margin/top = 204.0
margin/right = 310.0
margin/bottom = 371.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 6 )
flat = true
items = [  ]

[node name="timelobby" type="Label" parent="lobbyGui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -314.0
margin/top = -296.0
margin/right = 92.0
margin/bottom = -171.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0207214, 0.101341, 0.757813, 1 )
text = "COPYWARE\n"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sounds" type="SamplePlayer2D" parent="."]

transform/pos = Vector2( 356, 326 )
params/volume_db = 7.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 534.537
params/attenuation/max_distance = 16.0
params/attenuation/distance_exp = 1.0
config/polyphony = 2
config/samples = SubResource( 3 )
config/pitch_random = 0.0
__meta__ = { "_edit_lock_":true }

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 1000

[connection signal="timeout" from="timers/beforeGame" to="." method="_on_beforeGame_timeout"]

[connection signal="timeout" from="timers/duringGame" to="." method="_on_duringGame_timeout"]

[connection signal="pressed" from="lobbyGui/Quit" to="." method="_on_Quit_pressed"]


